# cadmium_v2

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  abs__simulator_8hpp_source.html  annotated.html  annotated_dup.js  asymm_2cell_8hpp_source.html  asymm_2config_8hpp_source.html  asymm__sir__cell_8hpp_source.html  atomic_8hpp_source.html  benchmark__grid__cell_8hpp_source.html  build.sh  celldevs_2asymm_2coupled_8hpp_source.html  celldevs_2core_2coupled_8hpp_source.html  celldevs_2grid_2coupled_8hpp_source.html  celldevs__benchmark_2include_2state_8hpp_source.html  celldevs__sir_2include_2state_8hpp_source.html  celldevs_examples.sh  classcadmium_1_1___big_port-members.html  classcadmium_1_1___big_port.html  classcadmium_1_1___big_port.js  classcadmium_1_1___port-members.html  classcadmium_1_1___port.html  classcadmium_1_1___port.js  classcadmium_1_1_abstract_simulator-members.html  classcadmium_1_1_abstract_simulator.html  classcadmium_1_1_abstract_simulator.js  classcadmium_1_1_atomic-members.html  classcadmium_1_1_atomic.html  classcadmium_1_1_atomic.js  classcadmium_1_1_atomic_interface-members.html  classcadmium_1_1_atomic_interface.html  classcadmium_1_1_atomic_interface.js  classcadmium_1_1_big_port-members.html  classcadmium_1_1_big_port.html  (+352 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml  codeql-analysis.yml
docs/: doxygen-awesome.css
example/Blinky/: cadmium_logging_on.json
example/Blinky/top_model/: main_rt_model.cpp  makefile  plotLogSimu.py
example/MSP432P401R/: README.md  input.txt  main.cpp  makefile
example/MSP432P401R/include/: accelerometerInput.hpp  blinky.hpp  blinkySystem.hpp  digitalInput.hpp  digitalOutput.hpp  joystickInput.hpp  lightSensorInput.hpp  microphoneInput.hpp  pwmOutput.hpp  temperatureSensorInput.hpp
example/_blinky/: _main_blinky.cpp
example/_rtModel/: _main_rt_model.cpp  occIn.txt  occOut.txt
example/_rtModel/include/: c02SensorController.hpp  covidSupervisorySystem.hpp  digitPin.hpp  digitalInput.hpp  ledController.hpp  occupencyController.hpp
example/celldevs_asymm_greater/: coupled.hpp  main_greater.cpp
example/celldevs_asymm_greater/cells/: default.hpp
example/celldevs_asymm_sir/: main_asymm_sir.cpp
example/celldevs_asymm_sir/include/: coupled.hpp  state.hpp
example/celldevs_benchmark/: benchmark_config.json  main_grid_benchmark.cpp  parallel_main_grid_benchmark.cpp
example/celldevs_benchmark/include/: benchmark_grid_cell.hpp  state.hpp
example/celldevs_greater/: config.json  coupled.hpp
example/celldevs_greater/cells/: default.hpp
example/celldevs_grid_sir/: config.json
example/celldevs_grid_sir/include/: coupled.hpp
example/celldevs_grid_sirds/: config.json  coupled.hpp  main_sirds.cpp  state.hpp  vicinity.hpp
example/celldevs_grid_sirds/cells/: sird.hpp
example/celldevs_sir/: asymm_config.json  grid_config.json  main_asymm_sir.cpp  main_flat_grid_sir.cpp  main_grid_sir.cpp  parallel_main_asymm_sir.cpp  parallel_main_grid_sir.cpp
example/celldevs_sir/include/: asymm_sir_cell.hpp  grid_sir_cell.hpp  state.hpp
example/devstone/: main_devstone.cpp  main_flat_devstone.cpp  main_parallel_devstone.cpp  parallel_main_devstone.cpp
example/devstone/include/: devstone.hpp  devstone_atomic.hpp  devstone_coupled.hpp  devstone_coupled_hi.hpp  devstone_coupled_ho.hpp  devstone_coupled_homod.hpp  devstone_coupled_li.hpp  devstone_generator.hpp  dhrystone.hpp
example/devstone/src/: devstone.cpp  devstone_atomic.cpp  devstone_coupled.cpp  devstone_coupled_hi.cpp  (+5 more)
example/efp/: main_efp.cpp
example/efp_gpt/: main_efp.cpp  main_flat_efp.cpp  main_flat_gpt.cpp  main_gpt.cpp  main_parallel_efp.cpp  main_parallel_gpt.cpp  main_rt_gpt.cpp  parallel_main_efp.cpp  parallel_main_gpt.cpp
example/geo-hospital/: CMakeLists.txt  main.cpp  main_gis.exe.stackdump
example/geo-hospital-cbm/: CMakeLists.txt  main.cpp
example/geo-hospital/atomics/: emergency_area.hpp  hospital.hpp
example/geo-hospital/coupled/: gis_emergencies.hpp
example/geo-hospital/data/: auto_instances.json  auto_relations.json
example/geo-hospital/output/: structure.json
example/geo-hospital/utils/: tools.hpp
example/gpt/: main_efp.cpp  main_gpt.cpp
example/ie_stream/: main_iestream.cpp  test.txt
example/iestream/: main_iestream.cpp
example/rtModel/: main_rt_model.cpp
example/rt_mbed/: .mbed  .mbedignore  README.md  cadmium.json  cadmium_logging_off.json  install.sh  mbed_app.json  mbed_settings.py
example/rt_msp432/: updateCadmiumLINUXorUBUNTU.sh  updateCadmiumWINDOWS.bat
include/cadmium/: basic.hpp  exception.hpp
include/cadmium-cbm/: coupler.hpp  factory.hpp  includes.hpp  model_mapping.hpp  tools.hpp
include/lib/: iestream.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+52 more)
templates/celldevs_asymm/: config.json  main_asymm.cpp
templates/celldevs_grid/: config.json  main_asymm.cpp
test/core_celldevs/: test_celldevs_queue.cpp
test/core_modeling/: test_atomic.cpp  test_coupled.cpp  test_modeling_port.cpp  test_port.cpp
test/devstone/: test_devstone.cpp
test/grid_celldevs/: test_grid_scenario.cpp
(+246 files in other folders)
